Added BruteForceLoginTest and swipe refresh for sessions

--- a/app/src/main/res/layout/faq_main.xml
+++ b/app/src/main/res/layout/faq_main.xml
@@ -1,6 +1,7 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/faq_cl"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.esc_50005.UI.Course.FAQ.CourseActivity">
@@ -27,4 +28,4 @@
         android:layout_marginRight="10dp"
         android:src="@drawable/ic_add_white_24dp"
         app:fabSize="normal" />
-</FrameLayout>
+</android.support.design.widget.CoordinatorLayout>
