--- a/app/src/main/res/layout/course_session_fragment.xml
+++ b/app/src/main/res/layout/course_session_fragment.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="10dp"
     android:orientation="vertical"
+    android:paddingBottom="10dp"
     tools:context="com.example.esc_50005.UI.Course.FAQ.CourseActivity">
 
 
@@ -25,37 +25,45 @@
 
             <TextView
                 android:id="@+id/add_new_session"
-                android:text="@string/add_new_session"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                android:textSize="20dp"
-                android:paddingTop="10dp"
                 android:paddingBottom="10dp"
+                android:paddingTop="10dp"
+                android:text="@string/add_new_session"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
                 android:textColor="#000000"
+                android:textSize="20dp"
                 app:layout_constraintLeft_toRightOf="@+id/add_button"
                 app:layout_constraintVertical_chainStyle="packed" />
 
             <ImageButton
-                android:onClick="onClick"
                 android:id="@+id/add_button"
-                android:src="@drawable/ic_add"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
                 android:background="?android:attr/selectableItemBackground"
+                android:onClick="onClick"
+                android:paddingBottom="10dp"
                 android:paddingLeft="10dp"
-                app:layout_constraintLeft_toLeftOf="parent"/>
+                android:paddingTop="10dp"
+                android:src="@drawable/ic_add"
+                app:layout_constraintLeft_toLeftOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
-    <android.support.v7.widget.RecyclerView
+
+    <android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/sessions_swipe"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/sessions_recycler"></android.support.v7.widget.RecyclerView>
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/sessions_recycler"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </LinearLayout>
