Finished used cases.

--- a/app/src/main/res/layout/fragment_qnlist_edit.xml
+++ b/app/src/main/res/layout/fragment_qnlist_edit.xml
@@ -26,6 +26,17 @@
                 android:layout_marginTop="0dp"
                 android:id="@+id/recyclerViewQuizList"></android.support.v7.widget.RecyclerView>
 
+
+            <Button
+                android:id="@+id/back"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:background="#fafafa"
+                android:text="Back"
+                android:layout_below="@id/recyclerViewQuizList"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -33,7 +44,7 @@
                 android:src="@drawable/ic_add_black_24dp"
                 android:background="#e0e0e0"
                 android:id="@+id/addbutton"
-                android:layout_below="@id/recyclerViewQuizList"
+                android:layout_below="@id/back"
                 />
 
 
