--- a/app/src/main/res/layout/sessionquestions_postquestions_main.xml
+++ b/app/src/main/res/layout/sessionquestions_postquestions_main.xml
@@ -23,15 +23,15 @@
             android:id="@+id/ll1">
 
             <EditText
-                android:id="@+id/question_input"
+                android:id="@+id/questions_et_question"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content"
                 android:hint="Type Question Here!"
                 android:inputType="text" />
 
             <Button
-                android:id="@+id/add_button"
-                android:layout_toRightOf="@+id/question_input"
+                android:id="@+id/questions_btn_add"
+                android:layout_toRightOf="@+id/questions_et_question"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="+"
@@ -39,10 +39,19 @@
         </RelativeLayout>
     </android.support.v7.widget.CardView>
 
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/questions_swipe"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="100dp"
-        android:id="@+id/recyclerViewPostQuestions"></android.support.v7.widget.RecyclerView>
+        android:id="@+id/questions_rv"></android.support.v7.widget.RecyclerView>
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </FrameLayout>
