--- a/app/src/main/res/layout/sessionquestions_postquestions_recycler.xml
+++ b/app/src/main/res/layout/sessionquestions_postquestions_recycler.xml
@@ -9,7 +9,7 @@
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/post_question_cv"
+        android:id="@+id/question_cv"
         style="@style/CardView.Light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,7 +24,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/item_post_question"
+                android:id="@+id/questions_tv_question"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
@@ -37,38 +37,36 @@
                 app:layout_constraintVertical_chainStyle="packed" />
 
             <TextView
-                android:id="@+id/post_question_tv_name"
+                android:id="@+id/questions_tv_date"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:lineSpacingExtra="8dp"
-                android:text="John"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="#555555"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/post_question_tv_date"
+                app:layout_constraintEnd_toStartOf="@id/questions_tv_upvotes"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/item_post_question"
+                app:layout_constraintTop_toBottomOf="@+id/questions_tv_question"
                 app:layout_constraintVertical_bias="0.0" />
 
             <TextView
-                android:id="@+id/post_question_tv_date"
+                android:id="@+id/questions_tv_upvotes"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
                 android:lineSpacingExtra="8dp"
-                android:text="01 March 2018"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="#555555"
-                app:layout_constraintEnd_toStartOf="@id/post_question_btn_upvote"
-                app:layout_constraintTop_toBottomOf="@+id/item_post_question" />
+                app:layout_constraintEnd_toStartOf="@id/questions_btn_upvote"
+                app:layout_constraintTop_toBottomOf="@+id/questions_tv_question" />
 
             <Button
-                android:id="@+id/post_question_btn_upvote"
+                android:id="@+id/questions_btn_upvote"
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -76,7 +74,7 @@
                 android:text="Upvote"
                 android:textColor="#114488"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/item_post_question" />
+                app:layout_constraintTop_toBottomOf="@+id/questions_tv_question" />
 
         </android.support.constraint.ConstraintLayout>
 
