--- a/app/src/main/res/layout/welcome_fragment.xml
+++ b/app/src/main/res/layout/welcome_fragment.xml
@@ -15,12 +15,12 @@
         style="?android:textAppearanceSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="92dp"
+        android:layout_marginLeft="88dp"
+        android:onClick="clickSignIn"
         android:text="Sign In"
         android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:layout_editor_absoluteY="229dp"
-        android:onClick="clickSignIn"/>
+        tools:layout_editor_absoluteY="325dp" />
 
     <Button
         android:id="@+id/sign_up_button"
