--- a/app/src/main/res/layout/course_session_fragment.xml
+++ b/app/src/main/res/layout/course_session_fragment.xml
@@ -62,8 +62,10 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/sessions_recycler"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+            android:layout_height="wrap_content"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" ></android.support.v7.widget.RecyclerView>
 
     </android.support.v4.widget.SwipeRefreshLayout>
+
 
 </LinearLayout>
