--- a/app/src/main/res/layout/fragment_qnlist_edit.xml
+++ b/app/src/main/res/layout/fragment_qnlist_edit.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UI.Session.Professor.SideScreens.EditQnListFrag"
+    tools:context=".UI.Session.Prof.SideScreens.EditQnListFrag"
     android:background="#59000000"
     android:clickable="true">
 
