Fixed question adder

--- a/app/src/main/res/layout/fragment_qnlist_edit.xml
+++ b/app/src/main/res/layout/fragment_qnlist_edit.xml
@@ -31,21 +31,24 @@
                 android:id="@+id/back"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_above="@+id/addbutton"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="12dp"
                 android:background="#fafafa"
                 android:text="Back"
-                android:layout_below="@id/recyclerViewQuizList"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
             <ImageView
+                android:id="@+id/addbutton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:src="@drawable/ic_add_black_24dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_marginBottom="21dp"
                 android:background="#e0e0e0"
-                android:id="@+id/addbutton"
-                android:layout_below="@id/back"
-                />
+                android:src="@drawable/ic_add_black_24dp" />
 
 
         </RelativeLayout>
