--- a/app/src/main/res/layout/studentans_recycler.xml
+++ b/app/src/main/res/layout/studentans_recycler.xml
@@ -28,56 +28,79 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
             <ImageView
+                android:id="@+id/option1pic"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/option1ans"
-                android:layout_below="@id/questionBox"
-                android:id="@+id/option1pic" />
+                android:layout_alignParentLeft="true"
+                android:layout_below="@id/questionBox" />
 
             <TextView
                 android:id="@+id/option1ans"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/questionBox" />
+                android:layout_height="24dp"
+                android:layout_alignParentRight="true"
+                android:layout_below="@+id/questionBox"
+                android:layout_toEndOf="@+id/option1pic"
+                android:layout_toRightOf="@+id/option1pic"
+                android:paddingLeft="5dp"
+                android:textColor="#000000"/>
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/option2ans"
+                android:id="@+id/option2pic"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_below="@id/option1pic"
-                android:id="@+id/option2pic" />
+                android:layout_toLeftOf="@id/option2ans" />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:id="@+id/option2ans"
-                android:layout_below="@id/option1ans"/>
+                android:layout_width="match_parent"
+                android:layout_height="24dp"
+                android:layout_below="@id/option1ans"
+                android:layout_toEndOf="@+id/option1pic"
+                android:layout_toRightOf="@+id/option1pic"
+                android:paddingLeft="5dp"
+                android:textColor="#000000"/>
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/option3ans"
-                android:layout_below="@id/option2pic"
-                android:id="@+id/option3pic"/>
+                android:id="@+id/option3pic"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/option2pic" />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:id="@+id/option3ans"
-                android:layout_below="@id/option2ans"/>
+                android:layout_width="match_parent"
+                android:layout_height="24dp"
+                android:layout_below="@id/option2ans"
+                android:layout_toEndOf="@+id/option2pic"
+                android:layout_toRightOf="@+id/option2pic"
+                android:paddingLeft="5dp"
+                android:textColor="#000000"/>
 
             <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/option4ans"
+                android:id="@+id/option4pic"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
                 android:layout_below="@id/option3pic"
-                android:id="@+id/option4pic"/>
+                android:layout_toLeftOf="@+id/option4ans"
+                android:layout_toStartOf="@+id/option4ans" />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:id="@+id/option4ans"
-                android:layout_below="@id/option3ans"/>
+                android:layout_width="match_parent"
+                android:layout_height="24dp"
+                android:layout_below="@id/option3ans"
+                android:layout_toEndOf="@+id/option1pic"
+                android:layout_toRightOf="@+id/option1pic"
+                android:paddingLeft="5dp"
+                android:textColor="#000000"/>
 
 
 
