--- a/app/src/main/res/layout/studentquiz_results.xml
+++ b/app/src/main/res/layout/studentquiz_results.xml
@@ -12,14 +12,21 @@
         android:layout_marginTop="70dp"
         android:background="#eeeeee">
 
+        <TextView
+            android:id="@+id/scoreHere"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+            android:textColor="#000000"
+            android:gravity="center_horizontal"
+            android:padding="5dp"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/recyclerViewStudentAns"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@id/closebutton"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"></android.support.v7.widget.RecyclerView>
+            android:layout_below="@id/scoreHere"></android.support.v7.widget.RecyclerView>
 
         <Button
             android:id="@+id/closebutton"
