--- a/app/src/main/res/layout/dashboard_courses_recycler.xml
+++ b/app/src/main/res/layout/dashboard_courses_recycler.xml
@@ -7,20 +7,34 @@
     android:orientation="vertical"
     tools:context="com.example.esc_50005.UI.Dashboard.main.DashboardActivity">
 
-    <android.support.v7.widget.CardView
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_view"
-    android:layout_gravity="center"
-    android:layout_width="150dp"
-    android:layout_height="150dp"
-    card_view:cardCornerRadius="4dp">
-
-    <TextView
-        android:id="@+id/courseName"
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card_view"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:layout_gravity="center"
-        android:textSize="15dp"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        card_view:cardCornerRadius="4dp">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TextView
+                android:id="@+id/courseName"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:textSize="15dp" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+               card_view:layout_constraintRight_toRightOf="parent"
+                android:id="@+id/delete_course"
+                android:background="@drawable/ic_delete" />
+
+        </android.support.constraint.ConstraintLayout>
+
     </android.support.v7.widget.CardView>
+
 
 </LinearLayout>
