--- a/app/src/main/res/layout/session_activity.xml
+++ b/app/src/main/res/layout/session_activity.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
-        android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
+        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
+        app:navigationIcon="?attr/homeAsUpIndicator"/>
 
         <!--<Button-->
         <!--android:layout_width="wrap_content"-->
