--- a/app/src/main/res/layout/faq_main.xml
+++ b/app/src/main/res/layout/faq_main.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     tools:context="com.example.esc_50005.UI.Course.FAQ.CourseActivity">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="@android:color/white" />
+
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/faq_swipe"
@@ -23,9 +28,9 @@
         android:id="@+id/faq_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|right"
+        android:layout_gravity="bottom|center"
         android:layout_marginBottom="10dp"
         android:layout_marginRight="10dp"
         android:src="@drawable/ic_add_white_24dp"
-        app:fabSize="normal" />
+        app:fabSize="mini" />
 </android.support.design.widget.CoordinatorLayout>
