--- a/app/src/main/res/layout/faq_recycler.xml
+++ b/app/src/main/res/layout/faq_recycler.xml
@@ -2,7 +2,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="8dp"
+    android:paddingTop="8dp"
+    android:background="@color/white"
     tools:context="com.example.esc_50005.UI.Course.FAQ.CourseActivity">
 
     <android.support.v7.widget.CardView
@@ -12,15 +13,14 @@
         style="@style/CardView.Light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:cardUseCompatPadding="true"
+        android:layout_marginEnd="-3dp"
+        android:layout_marginStart="-3dp"
+        android:layout_marginBottom="8dp"
         tools:ignore="ContentDescription">
 
         <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="100dp">
 
             <TextView
                 android:id="@+id/faq_tv_question"
@@ -28,13 +28,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="#000000"
+                android:textAppearance="@style/Faq_Question"
+                android:text="Sample Question"
                 app:layout_constraintBottom_toTopOf="@+id/faq_tv_answer"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_chainStyle="packed" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/faq_tv_answer"
@@ -42,12 +41,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
                 android:lineSpacingExtra="8dp"
                 android:text="Here is for the answer to the question which may have several lines"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                 android:textColor="#111111"
-                app:layout_constraintBottom_toTopOf="@+id/faq_tv_time"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/faq_tv_question" />
@@ -59,11 +56,11 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:lineSpacingExtra="8dp"
                 android:text="01 March 2018"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textAppearance="@style/Faq_Info"
                 android:textColor="#555555"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/faq_tv_answer" />
 
@@ -74,9 +71,10 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
                 android:lineSpacingExtra="8dp"
-                android:text="01 March 2018"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:text="2 upvotes"
+                android:textAppearance="@style/Faq_Info"
                 android:textColor="#555555"
                 app:layout_constraintEnd_toStartOf="@id/faq_btn_upvote"
                 app:layout_constraintTop_toBottomOf="@+id/faq_tv_answer" />
@@ -86,7 +84,6 @@
                 style="@style/Widget.AppCompat.Button.Borderless"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
                 android:text="Upvote"
                 android:textColor="#114488"
                 app:layout_constraintEnd_toEndOf="parent"
