--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#E1595C</color>
+    <color name="colorPrimaryDark">#E1595C</color>
+    <color name="colorAccent">#E1595C</color>
+    <color name="colorTab">#F9F9F9</color>
+    <color name="white">#FFFFFF</color>
+    <color name="colorHeadline">#111111</color>
+    <color name="transparent">#00000000</color>
 </resources>
