--- a/app/src/main/res/layout/faq_main.xml
+++ b/app/src/main/res/layout/faq_main.xml
@@ -8,8 +8,8 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@android:color/white" />
+        android:layout_height="8dp"
+        android:background="@color/backgroundGrey" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
