--- a/app/src/main/res/layout/faq_recycler.xml
+++ b/app/src/main/res/layout/faq_recycler.xml
@@ -3,7 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="8dp"
-    android:background="@color/white"
     tools:context="com.example.esc_50005.UI.Course.FAQ.CourseActivity">
 
     <android.support.v7.widget.CardView
@@ -15,17 +14,17 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="-3dp"
         android:layout_marginStart="-3dp"
-        android:layout_marginBottom="8dp"
         tools:ignore="ContentDescription">
 
         <android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/faq_tv_question"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:paddingTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:textAppearance="@style/Faq_Question"
@@ -39,11 +38,11 @@
                 android:id="@+id/faq_tv_answer"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                android:lineSpacingExtra="8dp"
                 android:text="Here is for the answer to the question which may have several lines"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                android:textAppearance="@style/Faq_Content"
                 android:textColor="#111111"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -82,7 +81,7 @@
             <Button
                 android:id="@+id/faq_btn_upvote"
                 style="@style/Widget.AppCompat.Button.Borderless"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:text="Upvote"
                 android:textColor="#114488"
