--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#E1595C</color>
     <color name="colorPrimaryDark">#E1595C</color>
     <color name="colorAccent">#E1595C</color>
-    <color name="colorTab">#F9F9F9</color>
+    <color name="colorTab">#FFFFFF</color>
+    <color name="backgroundGrey">#F9F9F9</color>
     <color name="white">#FFFFFF</color>
     <color name="colorHeadline">#111111</color>
     <color name="transparent">#00000000</color>
