--- a/app/src/main/res/layout/faq_recycler.xml
+++ b/app/src/main/res/layout/faq_recycler.xml
@@ -27,7 +27,7 @@
                 android:paddingTop="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
-                android:textAppearance="@style/Faq_Question"
+                android:textAppearance="@style/CardView_Title"
                 android:text="Sample Question"
                 app:layout_constraintBottom_toTopOf="@+id/faq_tv_answer"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -42,7 +42,7 @@
                 android:layout_marginEnd="16dp"
                 android:layout_marginStart="16dp"
                 android:text="Here is for the answer to the question which may have several lines"
-                android:textAppearance="@style/Faq_Content"
+                android:textAppearance="@style/CardView_Subtitle"
                 android:textColor="#111111"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -58,7 +58,7 @@
                 android:layout_marginBottom="16dp"
                 android:lineSpacingExtra="8dp"
                 android:text="01 March 2018"
-                android:textAppearance="@style/Faq_Info"
+                android:textAppearance="@style/CardView_Subtext"
                 android:textColor="#555555"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/faq_tv_answer" />
@@ -73,7 +73,7 @@
                 android:layout_marginBottom="16dp"
                 android:lineSpacingExtra="8dp"
                 android:text="2 upvotes"
-                android:textAppearance="@style/Faq_Info"
+                android:textAppearance="@style/CardView_Subtext"
                 android:textColor="#555555"
                 app:layout_constraintEnd_toStartOf="@id/faq_btn_upvote"
                 app:layout_constraintTop_toBottomOf="@+id/faq_tv_answer" />
