--- a/app/src/main/res/layout/item_empty_view.xml
+++ b/app/src/main/res/layout/item_empty_view.xml
@@ -4,11 +4,12 @@
     android:id="@+id/empty_ll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="top"
     android:orientation="vertical">
 
     <ImageView
         android:id="@+id/empty_img_sad"
+        android:layout_marginTop="100dp"
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_gravity="center"
@@ -38,5 +39,6 @@
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
         android:text="Retry"
+        android:theme="@style/RetryButton"
         android:textSize="20sp" />
 </LinearLayout>
