--- a/app/src/main/res/layout/course_session_recycler.xml
+++ b/app/src/main/res/layout/course_session_recycler.xml
@@ -48,21 +48,20 @@
 
                 android:paddingBottom="10dp"
                 android:paddingTop="10dp"
-                app:layout_constraintRight_toLeftOf="@+id/move_to_session"
-                app:layout_constraintRight_toRightOf="@id/session_details"
+                app:layout_constraintRight_toRightOf="parent"
                 tools:layout_editor_absoluteY="8dp" />
 
-            <ImageView
-                app:layout_constraintTop_toTopOf="@+id/session_details"
-                app:layout_constraintBottom_toBottomOf="@id/session_details"
-                android:id="@+id/move_to_session"
-                android:src="@drawable/ic_keyboard_arrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingTop="10dp"
-                android:paddingBottom="10dp"
-                android:background="?android:attr/selectableItemBackground"
-                app:layout_constraintRight_toRightOf="parent"/>
+            <!--<ImageView-->
+                <!--app:layout_constraintTop_toTopOf="@+id/session_details"-->
+                <!--app:layout_constraintBottom_toBottomOf="@id/session_details"-->
+                <!--android:id="@+id/move_to_session"-->
+                <!--android:src="@drawable/ic_keyboard_arrow"-->
+                <!--android:layout_width="wrap_content"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:paddingTop="10dp"-->
+                <!--android:paddingBottom="10dp"-->
+                <!--android:background="?android:attr/selectableItemBackground"-->
+                <!--app:layout_constraintRight_toRightOf="parent"/>-->
 
         </android.support.constraint.ConstraintLayout>
 
@@ -71,151 +70,6 @@
 </LinearLayout>
 
 
-    <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-    <!--xmlns:tools="http://schemas.android.com/tools"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:orientation="vertical">-->
 
-
-<!--<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--style="@style/CardView.Light"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginEnd="8dp"-->
-    <!--android:layout_marginStart="8dp"-->
-    <!--android:layout_marginTop="8dp"-->
-    <!--android:paddingTop="10dp"-->
-    <!--android:paddingBottom="10dp"-->
-    <!--app:cardUseCompatPadding="true"-->
-    <!--tools:ignore="ContentDescription">-->
-
-<!--<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content">-->
-
-<!--<TextView-->
-    <!--android:id="@+id/session_details"-->
-    <!--android:layout_width="0dp"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:layout_marginEnd="16dp"-->
-    <!--android:layout_marginStart="16dp"-->
-    <!--android:paddingTop="10dp"-->
-    <!--android:paddingBottom="10dp"-->
-    <!--android:textAppearance="@style/TextAppearance.AppCompat.Large"-->
-    <!--android:textColor="#000000"-->
-    <!--app:layout_constraintEnd_toEndOf="parent"-->
-    <!--app:layout_constraintStart_toStartOf="parent"-->
-    <!--app:layout_constraintTop_toTopOf="parent"-->
-    <!--app:layout_constraintVertical_chainStyle="packed" />-->
-
-
-    <!--&lt;!&ndash;<android.support.design.widget.CoordinatorLayout&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_height="match_parent">&ndash;&gt;-->
-<!--<ImageButton-->
-    <!--app:layout_constraintLeft_toRightOf="@+id/session_details"-->
-    <!--app:layout_constraintRight_toLeftOf="@+id/move_to_session_activity"-->
-    <!--android:paddingRight="70dp"-->
-    <!--android:paddingTop="8dp"-->
-    <!--android:id="@+id/showBottomSheetDialog"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:src="@mipmap/ic_icon_with_three_dots"-->
-    <!--style="?android:attr/borderlessButtonStyle"-->
-<!--/>-->
-
-        <!--&lt;!&ndash;<android.support.v4.widget.NestedScrollView&ndash;&gt;-->
-            <!--&lt;!&ndash;android:id="@+id/bottom_sheet"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:background="#EEEEEE"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:clipToPadding="true"&ndash;&gt;-->
-            <!--&lt;!&ndash;app:layout_behavior="android.support.design.widget.BottomSheetBehavior">&ndash;&gt;-->
-
-
-            <!--&lt;!&ndash;<include layout="@layout/bottom_sheet_content" />&ndash;&gt;-->
-
-        <!--&lt;!&ndash;</android.support.v4.widget.NestedScrollView>&ndash;&gt;-->
-    <!--&lt;!&ndash;</android.support.design.widget.CoordinatorLayout>&ndash;&gt;-->
-
-<!--<ImageView-->
-    <!--android:id="@+id/move_to_session_activity"-->
-    <!--android:src="@drawable/ic_keyboard_arrow"-->
-    <!--android:layout_width="wrap_content"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:paddingTop="10dp"-->
-    <!--android:paddingBottom="10dp"-->
-    <!--android:background="?android:attr/selectableItemBackground"-->
-    <!--app:layout_constraintRight_toRightOf="parent"/>-->
-
-<!--</android.support.constraint.ConstraintLayout>-->
-
-<!--</android.support.v7.widget.CardView>-->
-
-<!--<include layout="@layout/content_main" />-->
-
-<!--&lt;!&ndash; Bottom Sheet Dialog Content @set app:layout_behavior = "android.support.design.widget.BottomSheetBehavior" &ndash;&gt;-->
-
-
-<!--</LinearLayout>-->
-
-
-
-<!--&lt;!&ndash;<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"&ndash;&gt;-->
-    <!--&lt;!&ndash;xmlns:app="http://schemas.android.com/apk/res-auto"&ndash;&gt;-->
-    <!--&lt;!&ndash;xmlns:tools="http://schemas.android.com/tools"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
-    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-    <!--&lt;!&ndash;tools:context="com.example.esc_50005.UI.Course.FAQ.CourseActivity">&ndash;&gt;-->
-
-    <!--&lt;!&ndash;<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"&ndash;&gt;-->
-        <!--&lt;!&ndash;xmlns:app="http://schemas.android.com/apk/res-auto"&ndash;&gt;-->
-        <!--&lt;!&ndash;style="@style/CardView.Light"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_marginEnd="8dp"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_marginStart="8dp"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:layout_marginTop="8dp"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:paddingTop="10dp"&ndash;&gt;-->
-        <!--&lt;!&ndash;android:paddingBottom="10dp"&ndash;&gt;-->
-        <!--&lt;!&ndash;app:cardUseCompatPadding="true"&ndash;&gt;-->
-        <!--&lt;!&ndash;tools:ignore="ContentDescription">&ndash;&gt;-->
-
-        <!--&lt;!&ndash;<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
-            <!--&lt;!&ndash;android:layout_height="wrap_content">&ndash;&gt;-->
-
-            <!--&lt;!&ndash;<TextView&ndash;&gt;-->
-                <!--&lt;!&ndash;android:id="@+id/session_details"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_marginEnd="16dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_marginStart="16dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:paddingTop="10dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:paddingBottom="10dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:textAppearance="@style/TextAppearance.AppCompat.Large"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:textColor="#000000"&ndash;&gt;-->
-                <!--&lt;!&ndash;app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
-                <!--&lt;!&ndash;app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
-                <!--&lt;!&ndash;app:layout_constraintTop_toTopOf="parent"&ndash;&gt;-->
-                <!--&lt;!&ndash;app:layout_constraintVertical_chainStyle="packed" />&ndash;&gt;-->
-
-            <!--&lt;!&ndash;<ImageView&ndash;&gt;-->
-                <!--&lt;!&ndash;android:src="@drawable/ic_keyboard_arrow"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:paddingTop="10dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:paddingBottom="10dp"&ndash;&gt;-->
-                <!--&lt;!&ndash;android:background="?android:attr/selectableItemBackground"&ndash;&gt;-->
-                <!--&lt;!&ndash;app:layout_constraintRight_toRightOf="parent"/>&ndash;&gt;-->
-
-        <!--&lt;!&ndash;</android.support.constraint.ConstraintLayout>&ndash;&gt;-->
-
-    <!--&lt;!&ndash;</android.support.v7.widget.CardView>&ndash;&gt;-->
-
-<!--&lt;!&ndash;</LinearLayout>&ndash;&gt;-->
 
 
