--- a/app/src/main/res/layout/dashboard_courses_recycler.xml
+++ b/app/src/main/res/layout/dashboard_courses_recycler.xml
@@ -1,9 +1,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="30dp"
+    android:layout_marginLeft="30dp"
+    android:layout_marginRight="30dp"
     android:orientation="vertical"
     tools:context="com.example.esc_50005.UI.Dashboard.main.DashboardActivity">
 
@@ -12,6 +13,7 @@
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"
+        card_view:cardBackgroundColor="@color/colorDashboard"
         card_view:cardCornerRadius="4dp">
 
         <android.support.constraint.ConstraintLayout
@@ -19,18 +21,36 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/courseName"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_gravity="center"
-                android:textSize="15dp" />
-
-            <ImageButton
+                android:id="@+id/courseId"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-               card_view:layout_constraintRight_toRightOf="parent"
+                android:layout_gravity="center"
+                android:paddingTop="50dp"
+                android:paddingLeft="20dp"
+                android:textAppearance="@style/CardView_Subtitle"
+                android:textColor="@color/colorTab"
+                card_view:layout_constraintBottom_toTopOf="@+id/courseName" />
+
+            <TextView
+                android:paddingLeft="20dp"
+                android:id="@+id/courseName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:textAppearance="@style/CardView_Title"
+                android:textColor="@color/colorTab"
+                android:paddingBottom="0dp"
+                card_view:layout_constraintTop_toBottomOf="@+id/courseId" />
+
+            <ImageButton
                 android:id="@+id/delete_course"
-                android:background="@drawable/ic_delete" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/cross"
+                android:paddingTop="20dp"
+                card_view:layout_constraintRight_toRightOf="parent" />
 
         </android.support.constraint.ConstraintLayout>
 
