--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -9,12 +9,17 @@
     android:paddingRight="16dp"
     android:paddingTop="16dp">
 
-    <!-- Login progress -->
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/application_name"
+        android:textAppearance="@style/Login_Title"
+       />
 
     <ScrollView
         android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:id="@+id/email_login_form"
@@ -68,10 +73,12 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:checked="true"
+                    android:textColor="@color/colorPrimary"
                     android:text="Professor" />
 
                 <RadioButton
                     android:id="@+id/student"
+                    android:textColor="@color/colorPrimary"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
@@ -87,38 +94,40 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/action_sign_in"
                 android:textStyle="bold"
+                android:textColor="@color/colorTab"
+                android:background="@color/colorPrimary"
                 />
-
-            <android.support.constraint.ConstraintLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/register"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:paddingTop="13dp"
-                    app:layout_constraintRight_toLeftOf="@+id/sign_up_button"
-                    android:text="@string/sign_up"/>
-                <Button
-                    android:id="@+id/sign_up_button"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintLeft_toRightOf="@+id/register"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:paddingLeft="0dp"
-                    android:text="@string/action_sign_up"
-                    style="?android:attr/borderlessButtonStyle"
-                    android:textStyle="bold"
-                    android:onClick="clickSignUp"
-                    />
-
-            </android.support.constraint.ConstraintLayout>
-
-
-
         </LinearLayout>
     </ScrollView>
+
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+
+        <TextView
+            android:id="@+id/register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="13dp"
+            android:textColor="@color/colorPrimary"
+            app:layout_constraintRight_toLeftOf="@+id/sign_up_button"
+            android:text="@string/sign_up"/>
+        <Button
+            android:id="@+id/sign_up_button"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toRightOf="@+id/register"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:paddingLeft="0dp"
+            android:text="@string/action_sign_up"
+            android:textColor="@color/colorPrimary"
+            style="?android:attr/borderlessButtonStyle"
+            android:textStyle="bold"
+            android:onClick="clickSignUp"
+            />
+
+    </android.support.constraint.ConstraintLayout>
 
 </LinearLayout>
