--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -46,6 +46,12 @@
         <item name="android:fontFamily">@font/lato_light</item>
     </style>
 
+    <style name="Login_Title" parent="@style/TextAppearance.AppCompat.Body1">
+        <item name="android:textSize">50sp</item>
+        <item name="android:textColor">@color/colorPrimary</item>
+        <item name="android:fontFamily">@font/pacifico</item>
+    </style>
+
     <style name="CardView_Subtext" parent="@style/TextAppearance.AppCompat.Body1">
         <item name="android:textSize">12sp</item>
         <item name="android:textColor">@color/colorHeadline</item>
