--- a/app/src/main/res/layout/course_activity.xml
+++ b/app/src/main/res/layout/course_activity.xml
@@ -51,7 +51,7 @@
                     android:layout_height="wrap_content"
                     android:paddingLeft="30dp"
                     android:paddingRight="30dp"
-                    android:layout_gravity="center"
+                    android:layout_gravity="left"
                     android:gravity="left"
                     android:text="Elements of Software Construction"
                     android:textAppearance="@style/Toolbar_Title" />
