--- a/app/src/main/res/layout/dialog_feedback.xml
+++ b/app/src/main/res/layout/dialog_feedback.xml
@@ -2,56 +2,56 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:background="@drawable/dialog_bg">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
+    <!--<android.support.v7.widget.CardView-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_margin="10dp"-->
+    <!--app:cardCornerRadius="4dp"-->
+    <!--app:cardUseCompatPadding="true">-->
+
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        app:cardCornerRadius="4dp"
-        app:cardUseCompatPadding="true">
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        android:orientation="vertical"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
+        <TextView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:paddingBottom="65dp"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:paddingTop="30dp">
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:text="@string/rating_title"
+            android:textAppearance="@style/CardView_Title" />
 
+        <RatingBar
+            android:id="@+id/rating_bar_feedback"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="20dp"
+            android:numStars="5"
+            android:stepSize="0.5"
+            tools:rating="3" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
-                android:text="@string/rating_title" />
-
-            <RatingBar
-                android:id="@+id/rating_bar_feedback"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="20dp"
-                android:numStars="5"
-                android:stepSize="1"
-                tools:rating="3" />
-
-            <EditText
-                android:id="@+id/et_message"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:gravity="start|top"
-                android:inputType="textMultiLine"
-                android:lines="4"
-                android:maxLines="20"
-                android:padding="5dp" />
-
-        </LinearLayout>
+        <EditText
+            android:id="@+id/et_message"
+            android:layout_width="270dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/edit_text_style"
+            android:layout_gravity="center"
+            android:gravity="start|top"
+            android:hint="Any comments?"
+            android:inputType="textMultiLine"
+            android:lines="4"
+            android:maxLines="20"
+            android:padding="5dp"
+            android:textAppearance="@style/CardView_Subtitle" />
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -66,15 +66,22 @@
                 android:layout_alignParentLeft="true"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:text="Later" />
+                android:background="@color/transparent"
+                android:text="Later"
+                android:theme="@style/Widget.AppCompat.Button.Borderless" />
 
             <Button
                 android:id="@+id/btn_submit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:text="Submit" />
+                android:background="@color/transparent"
+                android:text="Submit"
+                android:textColor="@color/colorPrimary"
+                android:theme="@style/Widget.AppCompat.Button.Borderless" />
         </RelativeLayout>
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
+
+    <!--</android.support.v7.widget.CardView>-->
 
 </RelativeLayout>
