--- a/app/src/main/res/layout/responses_recycler.xml
+++ b/app/src/main/res/layout/responses_recycler.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools">
 
     <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
@@ -10,9 +10,7 @@
         style="@style/CardView.Light"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:orientation="horizontal"
         app:cardUseCompatPadding="true"
         tools:ignore="ContentDescription">
 
@@ -30,7 +28,30 @@
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textColor="#000000" />
 
+            <TextView
+                android:id="@+id/dateBox"
+                android:layout_width="122dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/answers"
+                android:layout_marginStart="8dp"
+                android:padding="5dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="#CC000000" />
 
+            <TextView
+                android:layout_width="108dp"
+                android:layout_height="wrap_content"
+                android:id="@+id/nameBox"
+                android:layout_alignParentEnd="true"
+                android:layout_below="@id/answers"
+                android:layout_marginLeft="171dp"
+                android:layout_marginStart="8dp"
+                android:layout_toRightOf="@id/dateBox"
+                android:gravity="right"
+                android:padding="5dp"
+                android:paddingRight="3dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="#CC000000" />
 
         </RelativeLayout>
 
